--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
     - name: print Java version
       run: java -version
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew clean build publish
