--- a/codegen/build.gradle
+++ b/codegen/build.gradle
@@ -5,19 +5,19 @@ sourceSets {
 }
 
 dependencies {
-    compile project(':protogen-annotations')
+    implementation project(':protogen-annotations')
 
-    compile 'com.google.guava:guava:25.1-jre'
-    compile 'com.squareup:javapoet:1.11.+'
-    compile 'com.github.jknack:handlebars:4.0.+'
-    compile 'com.google.protobuf:protobuf-java:3.5.1'
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile gradleApi()
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.squareup:javapoet:1.13.0'
+    implementation 'com.github.jknack:handlebars:4.2.0'
+    implementation 'com.google.protobuf:protobuf-javalite:3.17.1'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation gradleApi()
 
-    exampleCompile sourceSets.main.output
-    exampleCompile project(':protogen-annotations')
+    exampleImplementation sourceSets.main.output
+    exampleImplementation project(':protogen-annotations')
 
-    testCompile 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.+'
 }
 
 task exampleJar(type: Jar) {
@@ -27,12 +27,3 @@ task exampleJar(type: Jar) {
 
 testClasses.finalizedBy(exampleJar)
 
-bintray {
-    pkg {
-        version {
-            name = project.version
-            vcsTag = project.version
-            attributes = [:]
-        }
-    }
-}
