--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,6 @@ jobs:
       run: java -version
     - name: Build with Gradle
       run: ./gradlew clean build publish
+      env:
+        GITHUBPACKAGES_USER: ${{ github.actor }}
+        GITHUBPACKAGES_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
